src/chatbot.css
.-c-widget {
	width: 100%;
	height: 100%;
	overflow: hidden;
	display: flex;
	flex-direction: row;
	margin: 0;
	padding: 0;
	background: #fff;
}
.-c-widget, .-c-widget * {
	box-sizing: border-box;
	scrollbar-color: #cfcfcf transparent; /* in ChatGPT brighter (#ececec) and only for main area */
	scrollbar-width: thin; /* scrollbar without up/down buttons */
}
.-c-widget, .-c-input {
	font-family: ui-sans-serif,-apple-system,system-ui,Segoe UI,Helvetica,Apple Color Emoji,Arial,sans-serif,Segoe UI Emoji,Segoe UI Symbol;
	font-size: 1rem;
	color: #0d0d0d;
	margin: 0;
	padding: 0;
}
.-c-main, .-c-scroll, .-c-sticky, .-c-chat-area, .-c-form-area {
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
}
.-c-mbar {
	width: 100%;
	display: grid;
	grid-template-columns: 1fr minmax(0, 1fr) 1fr;
	position: absolute;
	height: 0;
	padding: 0;
	z-index: 9;
}
.-c-start, .-c-end {
	min-width: max-content;
	display: inline-flex;
	padding: .5rem;
}
.-c-start {
	justify-self: start;
}
.-c-end {
	justify-self: end;
}
.-c-center {
	justify-self: stretch;
	text-align: center;
	min-width: 0;
}
@media (max-width: 54rem) {
	.-c-root .-c-mbar {
		position: relative;
		height: unset;
		padding: .5rem;
	}
	.-c-root .-c-mbar .-c-start, .-c-mbar .-c-end {
		padding: 0;
	}
}
@media (max-width: 74rem) {
	.-c-widget.-c-side-r .-c-root .-c-mbar {
		position: relative;
		height: unset;
		padding: .5rem;
	}
	.-c-widget.-c-side-r .-c-root .-c-mbar .-c-start, .-c-widget.-c-side-r .-c-root .-c-mbar .-c-end {
		padding: 0;
	}
}
.-c-splash .-c-btn.-c-new {
	display: none;
}
.-c-root {
	position: relative;
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
}
.-c-sources {
	position: relative;
	width: 420px;
	background: #f9f9f9;
	border-left: 1px solid #cfcfcf;
	transition-property: width;
	transition-timing-function: cubic-bezier(.4,0,.2,1);
	transition-duration: .3s;
	overflow-y: auto;
	scrollbar-width: thin;
	scrollbar-color: #333 transparent;
	padding: .25rem;
}
.-c-sources .-c-mbar {
	position: absolute;
	top: .5rem;
	right: .5rem;
	height: 0;
	padding: 0;
	display: inline-flex;
	flex-direction: column;
	min-height: 2rem;
}
.-c-sources .-c-h {
	font-size: 1.25rem;
	font-weight: 400;
	color: #cfcfcf;
	padding: .5rem 0 0 .5rem;
}
.-c-sources ol {
	padding: 0;
	margin: .5rem 0;
	list-style-type: none;
}
.-c-sources a, .-c-sources a:hover {
	display: flex;
	width: 100%;
	padding: .5rem;
	text-decoration: none;
	color: #0d0d0d;
}
.-c-sources a:hover {
	background: #efefef;
	border-radius: 10px;
}
.-c-sources a .-c-ref- {
	display: inline-block;
	color: #999;
	background: #f4f4f4;
	border-radius: 9em;
	font-size: .625em;
	font-weight: bold;
	margin: 0 4px 0 0;
	min-width: 1.8em;
	height: 1.7em;
	padding: 1px 2px 2px 2px;
	position: relative;
	text-align: center;
	vertical-align: top;
}
.-c-sources a:hover .-c-ref- {
	color: #0d0d0d;
	background: #d7d7d7;
}
.-c-sources li.-c-closed > ol {
	display: none;
}
.-c-sources li.-c-more-li {
	padding-top: .75rem;
}
.-c-sources .-c-more {
    margin-left: 1.375rem;
}
.-c-sources .-c-more-h {
    cursor: pointer;
	padding-left: 1.875rem;;
}
.-c-sources .-c-more-- {
    color: #cfcfcf;
	font-weight: 400;
}
.-c-sources .-c-more-h:hover .-c-more-- {
    color: #0d0d0d;
}
.-c-sources .-c-more- {
	margin-left: .75rem;
    color: #333;
    transform: rotate(90deg);
    /* prevent text selection */
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none; /* otherwise in MS Edge a blinking text cursor will be shown */
    display: inline-block;
    position: absolute;
    left: -2px;
    animation: fly-left 3s ease-in forwards;
    transition: transform .25s, color .25s;
}
.-c-sources .-c-closed .-c-more- {
    transform: none;
    color: #999;
}
.-c-main {
	position: relative;
	height: 100%;
	overflow: auto;
}
.-c-title, .-c-chat-area, .-c-form-area, .-c-footer {
	padding: 0 1.25rem;
}
.-c-scroll {
	flex: 1;
}
.-c-sticky {
	position: sticky;
	bottom: 0;
}
.-c-widget.-c-splash .-c-scroll {
	flex: 0 0 38%;
}
.-c-widget.-c-splash .-c-sticky {
	flex: 1;
	position: relative;
	bottom: auto;
}
.-c-title, .-c-widget.-c-splash .-c-chat-area {
	display: none;
}
.-c-widget.-c-splash .-c-title, .-c-widget.-c-splash .-c-footer {
	flex: 1;
	display: flex;
	align-items: flex-end;
}
.-c-widget.-c-splash .-c-title {
	font-size: 1.875rem;
	font-weight: 600;
	margin: 0 0 2.75rem 0;
}
.-c-form, .-c-chat {
	box-sizing: border-box;
	width: 100%;
	max-width: 48rem;
	align-items: center;
}
.-c-chat-area {
	flex: 1;
}
.-c-msg-p {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	padding: 1.25rem 0;
}
.-c-msg {
	width: auto;
	overflow: auto;
	overflow-wrap: break-word;
}
.-c-msg-p * {
	word-wrap: anywhere;
}
.-c-msg-p.-c-role-user {
	align-items: flex-end;
}
.-c-msg-p.-c-role-user .-c-msg {
	max-width: 33.7rem; /* =48rem*0.70 */
	white-space: pre-wrap;
	background: #f4f4f4;
	padding: .625rem 1.25rem;
	border-radius: 1.125rem;
}
.-c-form {
	border-radius: 1.75rem;
	display: flex;
	flex-direction: row;
	padding: .625rem;
	background: #fff;
	border: 1px solid #cfcfcf;
	box-shadow: rgba(0, 0, 0, .04) 0px 4px 4px 0px, rgba(0, 0, 0, .62) 0px 0px 1px 0px, 0 2rem 2rem 3rem #fff;
}
.-c-form.-c-o {
	display: grid;
	grid-template-rows: 1fr auto;
	grid-template-columns: 1fr auto;
}
.-c-input {
	flex: 1;
	display: block;
	width: 100%;
	margin: 0 -2.25rem 0 0;
	padding: 0 2.5rem 0 .75rem;
	justify-content: center;
	border: none;
	outline: none;
	background: transparent;
	resize: none;
}
.-c-o .-c-input {
	grid-column-start: 1;
	grid-column-end: 3;
	padding: 0 .15rem;
	margin: 6px 0;
	min-height: 1.75rem;
}
.-c-input::placeholder, .-c-footer, .-c-footer a {
	color: #8f8f8f;
}
.-c-footer {
	text-align: center;
	font-size: .75rem;
	padding: .5rem;
}
.-c-footer a {
	text-decoration: none;
}
.-c-footer a:hover {
	text-decoration: underline;
}
/* ... */

